--- a/src/View/FenFXML_AjoutSport.fxml
+++ b/src/View/FenFXML_AjoutSport.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_AjoutSportController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="110.0" prefWidth="347.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controller.FenFXML_AjoutSportController">
+   <children>
+      <ImageView fitHeight="108.0" fitWidth="130.0" layoutX="211.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Image/ajout.JPG" />
+         </image>
+      </ImageView>
+      <Label layoutX="14.0" layoutY="14.0" text="Nom :" />
+      <TextField fx:id="texteNom" layoutX="55.0" layoutY="10.0" />
+      <Button layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleAjout" text="Ajouter" />
+   </children>
 </AnchorPane>
