--- a/src/View/FenFXML_Confirmation.fxml
+++ b/src/View/FenFXML_Confirmation.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.image.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -8,15 +9,24 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="142.0" prefWidth="306.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_ConfirmationController">
+<AnchorPane id="AnchorPane" prefHeight="154.0" prefWidth="359.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_ConfirmationReservationController">
    <children>
-      <Button layoutX="264.0" layoutY="107.0" mnemonicParsing="false" onAction="#handleOk" style="-fx-background-color: #00ff08;" text="OK" textFill="WHITE" />
-      <ImageView fitHeight="93.0" fitWidth="86.0" layoutX="229.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <HBox layoutX="239.0" layoutY="114.0" spacing="15.0">
+         <children>
+            <Button layoutX="217.0" layoutY="138.0" mnemonicParsing="false" onAction="#handleOk" style="-fx-background-color: #00ff08;" text="OK" textFill="WHITE">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Button>
+            <Button layoutX="258.0" layoutY="138.0" mnemonicParsing="false" onAction="#handleAnnul" style="-fx-background-color: #ff0000;" text="Annuler" textFill="WHITE" />
+         </children>
+      </HBox>
+      <ImageView fitHeight="85.0" fitWidth="106.0" layoutX="239.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Image/reussi.jpg" />
+            <Image url="@../Image/confirmation.jpg" />
          </image>
       </ImageView>
-      <TextArea fx:id="texteConfirmation" layoutX="14.0" layoutY="14.0" prefHeight="114.0" prefWidth="205.0" style="-fx-border-color: #00ff08;" wrapText="true">
+      <TextArea fx:id="textConfirmation" layoutX="14.0" layoutY="14.0" prefHeight="125.0" prefWidth="200.0" style="-fx-border-color: red;" wrapText="true">
          <font>
             <Font name="Cambria" size="12.0" />
          </font></TextArea>
