--- a/src/View/FenFXML_AjoutSport.fxml
+++ b/src/View/FenFXML_AjoutSport.fxml
@@ -16,6 +16,6 @@
       </ImageView>
       <Label layoutX="14.0" layoutY="14.0" text="Nom :" />
       <TextField fx:id="texteNom" layoutX="55.0" layoutY="10.0" />
-      <Button layoutX="6.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleAjout" text="Ajouter" />
+      <Button layoutX="6.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleAjout" style="-fx-background-color: #cc0909;" text="Ajouter" textFill="WHITE" />
    </children>
 </AnchorPane>
