--- a/src/View/FenFXML_AjoutSport.fxml
+++ b/src/View/FenFXML_AjoutSport.fxml
@@ -15,7 +15,10 @@
          </image>
       </ImageView>
       <Label layoutX="14.0" layoutY="14.0" text="Nom :" />
-      <TextField fx:id="texteNom" layoutX="55.0" layoutY="10.0" />
+      <TextField fx:id="texteNom" layoutX="55.0" layoutY="10.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
       <Button layoutX="6.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleAjout" style="-fx-background-color: #cc0909;" text="Ajouter" textFill="WHITE" />
    </children>
 </AnchorPane>
