--- a/src/View/FenFXML_Sport.fxml
+++ b/src/View/FenFXML_Sport.fxml
@@ -7,23 +7,29 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="503.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_SportController">
+<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="511.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_SportController">
    <children>
-      <GridPane layoutX="20.0" layoutY="20.0" prefHeight="260.0" prefWidth="360.0">
+      <GridPane layoutX="20.0" layoutY="20.0" prefHeight="270.0" prefWidth="360.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="365.0" minHeight="10.0" prefHeight="234.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="2.0" minHeight="2.0" prefHeight="2.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView fx:id="listeSport" prefHeight="238.0" prefWidth="360.0" />
-            <Button mnemonicParsing="false" onAction="#handleAjoutSport" style="-fx-background-color: #dd290d;" text="Ajouter" textFill="WHITE" GridPane.rowIndex="1">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
+            <ListView fx:id="listeSport" onMouseClicked="#handleAfficheBtnModif" prefHeight="238.0" prefWidth="360.0" />
+            <HBox alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="360.0" spacing="10.0" GridPane.rowIndex="2">
+               <children>
+                  <Button layoutX="413.0" layoutY="264.0" mnemonicParsing="false" onAction="#handleAjoutSport" style="-fx-background-color: #dd290d;" text="Ajouter" textFill="WHITE">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="btnModif" layoutX="442.0" layoutY="239.0" mnemonicParsing="false" onAction="#handleModifSport" prefHeight="15.0" prefWidth="63.0" style="-fx-background-color: white; -fx-border-color: #dd290d; -fx-border-radius: 4;" text="Modifier" textFill="#dd290d" />
+               </children>
+            </HBox>
          </children>
       </GridPane>
       <ImageView fitHeight="117.0" fitWidth="113.0" layoutX="398.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
