--- a/src/View/FenFXML_Association.fxml
+++ b/src/View/FenFXML_Association.fxml
@@ -7,28 +7,34 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="670.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controller.FenFXML_AssociationController">
+<AnchorPane id="AnchorPane" prefHeight="402.0" prefWidth="763.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_AssociationController">
    <children>
-      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="371.0" prefWidth="424.0">
+      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="379.0" prefWidth="525.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="400.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="338.0" minHeight="10.0" prefHeight="338.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView fx:id="listeAssociation" prefHeight="200.0" prefWidth="200.0" />
             <HBox alignment="CENTER_LEFT" spacing="30.0" GridPane.rowIndex="1">
                <children>
                   <Button layoutX="495.0" layoutY="288.0" mnemonicParsing="false" style="-fx-background-color: #e00202;" text="Ajouter" textFill="WHITE" />
-                  <Button layoutX="503.0" layoutY="325.0" mnemonicParsing="false" style="-fx-background-color: #5778e0;" text="Modifier" textFill="WHITE" />
+                  <Button fx:id="btnModif" layoutX="503.0" layoutY="325.0" mnemonicParsing="false" onAction="#handleModifAssoc" style="-fx-background-color: #5778e0;" text="Modifier" textFill="WHITE" />
                </children>
             </HBox>
+            <TableView fx:id="listeAssociation" onMouseClicked="#handleChoixAssoc" prefHeight="400.0" prefWidth="400.0">
+              <columns>
+                <TableColumn fx:id="colonneNom" maxWidth="131.0" minWidth="131.0" prefWidth="131.0" text="Nom" />
+                <TableColumn fx:id="colonneAdresse" maxWidth="131.0" minWidth="131.0" prefWidth="131.0" text="Adresse" />
+                  <TableColumn fx:id="colonneVille" maxWidth="131.0" minWidth="131.0" prefWidth="131.0" text="Ville" />
+                  <TableColumn fx:id="colonneResponsable" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" text="Responsable" />
+              </columns>
+            </TableView>
          </children>
       </GridPane>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="454.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="549.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Image/association.jpg" />
          </image>
