--- a/src/View/FenFXML_AjoutSport.fxml
+++ b/src/View/FenFXML_AjoutSport.fxml
@@ -11,7 +11,7 @@
    <children>
       <ImageView fitHeight="108.0" fitWidth="130.0" layoutX="211.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Image/ajout.JPG" />
+            <Image url="@../Image/AjoutSport.png" />
          </image>
       </ImageView>
       <Label layoutX="14.0" layoutY="14.0" text="Nom :" />
