--- a/src/View/FenFXML_Reservation.fxml
+++ b/src/View/FenFXML_Reservation.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="356.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_ReservationController">
+<AnchorPane id="AnchorPane" prefHeight="293.0" prefWidth="545.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_ReservationController">
    <children>
-      <GridPane layoutX="35.0" layoutY="82.0" prefHeight="237.0" prefWidth="308.0">
+      <GridPane layoutX="35.0" layoutY="35.0" prefHeight="237.0" prefWidth="308.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="115.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="473.0" minWidth="10.0" prefWidth="241.0" />
@@ -35,19 +35,10 @@
             <ComboBox fx:id="cmbHeure" onAction="#handleAfficherSalle" prefWidth="180.0" promptText="Choisir une plage-horaires" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Label layoutX="41.0" layoutY="28.0" text="Réservation d'une salle">
-         <font>
-            <Font name="Cambria Italic" size="31.0" />
-         </font></Label>
-      <Button layoutX="506.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleReserverSalle" text="Réserver" />
-      <Label fx:id="labelAttention3" layoutX="301.0" layoutY="143.0" prefHeight="21.0" prefWidth="180.0" style=": ; : 5;" text=" &lt;--- Choisissez une date future" textFill="RED">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="126.0" fitWidth="171.0" layoutX="410.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="460.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleReserverSalle" style="-fx-background-color: #2267dd;" text="Réserver" textFill="WHITE" />
+      <ImageView fitHeight="126.0" fitWidth="171.0" layoutX="388.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Image/reservation.jpg" />
+            <Image url="@../Image/reservation.png" />
          </image>
       </ImageView>
    </children>
