--- a/src/View/FenFXML_AjoutSalle.fxml
+++ b/src/View/FenFXML_AjoutSalle.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="323.0" prefWidth="456.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="Controller.FenFXML_AjoutSalleController">
+<AnchorPane id="AnchorPane" prefHeight="323.0" prefWidth="456.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.FenFXML_AjoutSalleController">
    <children>
       <GridPane layoutX="14.0" layoutY="14.0" prefHeight="190.0" prefWidth="275.0">
          <children>
@@ -43,7 +42,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Button fx:id="btnAjout" layoutX="14.0" layoutY="284.0" mnemonicParsing="false" style="-fx-background-color: #c21414;" text="Ajouter" textFill="WHITE" />
+      <Button fx:id="btnAjout" layoutX="14.0" layoutY="284.0" mnemonicParsing="false" onAction="#handleAjout" style="-fx-background-color: #c21414;" text="Ajouter" textFill="WHITE" />
       <ImageView fitHeight="122.0" fitWidth="150.0" layoutX="292.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Image/AjoutSalle.png" />
